adding history for valued node